--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  background: url("background.jpg") top right no-repeat;
+  background: url("img/background.jpg") top right no-repeat;
   background-attachment: fixed;
   background-size: 100%;
   display: flex;
