--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-  position: relative;
+  position: fixed;
   margin-top: 64px;
   width: 85%;
   height: 75%;
@@ -53,7 +53,7 @@ body {
   width: 75%;
   height: 250px;
   margin: 100px auto;
-  margin-bottom: 120px;
+  margin-bottom: 75px;
   font-size: 24px;
   text-align: center;
   color: rgb(211, 211, 211);
