--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 
 .button {
   display: block;
-  width: 20%;
+  width: 12rem;
   height: 8%;
   margin: 5px auto;
   border: 2px solid #e7e7e7;
